[SVN] r2347 Cinema - Heroku in /Projects/Cinema/ [FIX] Missing templates from deployment folder [FIX] Missing images from deployment folder [FIX] Loading spinner not visible

--- a/Heroku/frontend/src/planner/styles/planner.css
+++ b/Heroku/frontend/src/planner/styles/planner.css
@@ -113,8 +113,8 @@ video {
 [class^="icon-"].loading,
 [class*=" icon-"].loading,
 .glyphicon.loading {
-    background-image: url('../images/icon-loading-white.gif');
-    background-position: 0;
+    background: url('images/icon-loading-white.gif') no-repeat 0;
+	width: 16px;
 }
 .glyphicon.loading:before {
 	content: "";
